new microblog page

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>19.jul.25 - 12am</b> bought a digital cam off ebay today!!! i didn't want anything fancy so i went with this used <i>fujifilm finepix ax660</i> in purple <small>(my favorite color!)</small> <button onclick="showPic('!g/250719-bought-digicam.png','a purple fujifilm digital camera','shes\'s so cuteeeeee! i can\'t wait to take pics with it on my trip he he he')">bought-digicam.png</button></p>
+				</article>
+				<article>
 					<p><b>16.jul.25 - 10pm</b> been messing around with <a href="https://11ty.dev" target="_blank" class="outlink">eleventy</a> in hopes of getting something together for pages like my <a href="/journal">journal</a> and <a href="/blog">blog</a> but i've been having trouble trying to figure out how i could have eleventy working only in some directories of my website. i tried putting my entire site through eleventy but given how big my site is, it's not something i really fuck with... i fear <i>doqmeat.com</i> will be hand-coded til the day i die. though i def have to say that static site generators are pretty neat! i might move my journal log to a different subdomain at some point so i can run it through 11ty but i ain't doing all that right now. i am thinking of using it for my <a href="https://sinnamota.doqmeat.com" target="_blank">siinamota fanlisting</a> though...</p>
 				</article>
 				<article>
