minor changes to photobook

--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -29,30 +29,26 @@ coded with love by des
 			<img src="instant-cam%20(1).png">
 		</div>
 		<p><b>digital</b> pics are from my shitty android phone *crying* wanna save for a nice digital camera someday! and i also take pics with my <b>3DS</b> cus it's fun :3</p>
-		<details>
-			<summary>border legend</summary>
-			<p class="film" style="border-bottom-width: 30px;background:#A98379;padding:3px">instant film</p>
-			<p class="digi">phone pics</p>
-			<p class="ds">3DS</p>
-		</details>
 		<div id="p1"><img src="/!g/deco/instant-pic.gif"></div>
 
 		<div id="p3"><img src="/!g/deco/cam-instant.gif"></div>
 
 		<div id="p2"><img src="/!g/deco/cam_34.gif"></div>
 
-		<p>filters:
+		<p><img src="/!g/pix/pics.gif" alt=""> <b>tags:</b>
 			<button onclick="showPics('pic')">all</button>,
-			<button onclick="showPics('digi')">digital</button>,
-			<button onclick="showPics('film')">instant film</button>,
+			<button onclick="showPics('phone')">phone pics</button>,
+			<button onclick="showPics('instax')">instant film</button>,
 			<button onclick="showPics('ds')">3DS</button>
+			<button title="no pics atm but soon!" onclick="showPics('finepix')">digital camera</button>
 		</p>
 	</header>
 
 	<main>
 		<!-- 	TEMPLATE!!!!!!!!
 
-			<div class="pic x"><img src="!g/160419-butter.jpg">
+			<div class="pic x">
+			<img src="" alt="">
 				<div class="hov">
 					<p class="caption">
 						hiii this is a caption
@@ -60,7 +56,8 @@ coded with love by des
 				</div>
 			</div>
 -->
-		<div class="pic digi">
+
+		<div class="pic phone">
 			<img src="!g/250609-flowers.jpg" alt="a picture of some pink flowers with a bit of a grey sky in the background">
 			<div class="hov">
 				<p class="caption">
@@ -71,7 +68,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi">
+		<div class="pic phone">
 			<img src="!g/231227-florida%20(7).jpg">
 			<img src="!g/231227-florida%20(9).jpg">
 			<img src="!g/231227-florida%20(1).jpg">
@@ -97,7 +94,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/240609-sunset.jpg">
+		<div class="pic phone"><img src="!g/240609-sunset.jpg">
 			<div class="hov">
 				<p class="caption">
 					beautiful sunset
@@ -107,7 +104,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi">
+		<div class="pic phone">
 			<img src="!g/240601-az%20(2).jpg">
 			<img src="!g/240601-az%20(4).jpg">
 			<img src="!g/240601-az%20(1).jpg">
@@ -122,7 +119,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/240402-cat.jpg">
+		<div class="pic phone"><img src="!g/240402-cat.jpg">
 			<div class="hov">
 				<p class="caption">
 					chillin' on top of a car. dick face...
@@ -130,7 +127,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/230220-sunset-1.jpg"><img src="!g/230220-sunset-2.jpg"><img src="!g/230220-sunset-3.jpg">
+		<div class="pic instax"><img src="!g/230220-sunset-1.jpg"><img src="!g/230220-sunset-2.jpg"><img src="!g/230220-sunset-3.jpg">
 			<div class="hov">
 				<p class="caption">
 					sunsets
@@ -138,13 +135,13 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/160419-butter.jpg">
+		<div class="pic phone"><img src="!g/160419-butter.jpg">
 			<div class="hov">
 				<p class="caption">butterflies :D <br>butterflies make me so happy</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/230701-swamp.jpg">
+		<div class="pic instax"><img src="!g/230701-swamp.jpg">
 			<div class="hov">
 				<p class="caption">
 					swamp
@@ -152,38 +149,38 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/230701-shell.jpg">
+		<div class="pic instax"><img src="!g/230701-shell.jpg">
 			<div class="hov">
 				<p class="caption">
 					wall that was completely made out of shells. there was also a house that was also entirely covered with shells. pretty neat!</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/230701-birds.jpg">
+		<div class="pic instax"><img src="!g/230701-birds.jpg">
 			<div class="hov">
 				<p class="caption">birds flying above me at the beach. they were looking for dinner</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/230701-beach.jpg">
+		<div class="pic instax"><img src="!g/230701-beach.jpg">
 			<div class="hov">
 				<p class="caption">a sad looking beach. didnt get in</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/230628-rainbow.jpg">
+		<div class="pic phone"><img src="!g/230628-rainbow.jpg">
 			<div class="hov">
 				<p class="caption">i love seeing rainbows while driving</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/230519-dog-perla.jpeg">
+		<div class="pic phone"><img src="!g/230519-dog-perla.jpeg">
 			<div class="hov">
 				<p class="caption">doggy :D</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/240625-jerome%20(1).jpg">
+		<div class="pic phone"><img src="!g/240625-jerome%20(1).jpg">
 			<img src="!g/240625-jerome%20(2).jpg">
 			<img src="!g/240625-jerome%20(3).jpg">
 			<img src="!g/240625-jerome%20(4).jpg">
@@ -194,7 +191,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi">
+		<div class="pic phone">
 			<img src="!g/240605-rose-garden%20(1).jpg">
 			<img src="!g/240605-rose-garden%20(2).jpg">
 			<img src="!g/240605-rose-garden%20(3).jpg">
@@ -210,7 +207,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/240120-cat-shrine%20(2).jpg" alt="cat shrine"><img src="!g/240120-cat-shrine%20(1).jpg" alt="cat shrine">
+		<div class="pic phone"><img src="!g/240120-cat-shrine%20(2).jpg" alt="cat shrine"><img src="!g/240120-cat-shrine%20(1).jpg" alt="cat shrine">
 			<div class="hov">
 				<p class="caption">
 					a shrine for a cat, saw this at my uni campus ＞︿＜
@@ -220,7 +217,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/210503-mizu-2.jpg">
+		<div class="pic instax"><img src="!g/210503-mizu-2.jpg">
 			<div class="hov">
 				<p class="caption">
 					instant film <a title="mizu shrine!" href="/shrines/mizu/">mizu</a> :3
@@ -228,41 +225,41 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/200304-moon.jpg">
+		<div class="pic phone"><img src="!g/200304-moon.jpg">
 			<div class="hov">
 				<p class="caption">one day i bought a cheap (i think, it was like 60 dollars or something) polaroid telescope. mostly just used it to look at the moon. the thing didn't take pictures so i put my phone's camera on the eyehole to get this pic. one of my fav pics ever</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/210903-car.jpg">
+		<div class="pic instax"><img src="!g/210903-car.jpg">
 			<div class="hov">
 				<p class="caption">abandoned car</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/210827-airplane-to-pr.jpg">
+		<div class="pic phone"><img src="!g/210827-airplane-to-pr.jpg">
 			<div class="hov">
 				<p class="caption">on my airplane ride to puerto rico</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/191230-snow.png">
+		<div class="pic instax"><img src="!g/191230-snow.png">
 			<div class="hov">
 				<p class="caption">tiny snowmen. dad and son</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/190603-night.png">
+		<div class="pic instax"><img src="!g/190603-night.png">
 			<div class="hov"></div>
 		</div>
 
-		<div class="pic film"><img src="!g/221018-isabela-4.jpg">
+		<div class="pic instax"><img src="!g/221018-isabela-4.jpg">
 			<div class="hov">
 			</div>
 		</div>
 
 
-		<div class="pic digi"><img src="!g/240716.jpg">
+		<div class="pic phone"><img src="!g/240716.jpg">
 			<div class="hov">
 				<p class="caption">
 					cute flowers i saw while walking
@@ -271,7 +268,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic film">
+		<div class="pic instax">
 			<img src="!g/240702-filmscans%20(2).jpg">
 			<div class="hov">
 				<p class="caption">
@@ -293,7 +290,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/240322-pond.jpg">
+		<div class="pic phone"><img src="!g/240322-pond.jpg">
 			<div class="hov">
 				<p class="caption">
 					a little pond <br> <b>taken on 21.mar.24</b>
@@ -301,59 +298,59 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/231202-caterpillar-flower.jpg">
+		<div class="pic phone"><img src="!g/231202-caterpillar-flower.jpg">
 			<div class="hov">
 				<p class="caption">while on my walk, i stopped to take a pic of these flowers. when i bend down to take the pic, i noticed the lil caterpillar underneath the leaf :3 what a cutie. <b>taken on 02.dec.23</b></p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/160305-mushroom.jpg">
+		<div class="pic phone"><img src="!g/160305-mushroom.jpg">
 			<div class="hov">
 				<p class="caption">MUSHROOMS!!!! i haven't seen mushrooms growing in the wild in so long, it makes me sad.</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/221018-isabela-1.jpg"><img src="!g/221018-isabela-3.jpg">
+		<div class="pic instax"><img src="!g/221018-isabela-1.jpg"><img src="!g/221018-isabela-3.jpg">
 			<div class="hov">
 				<p class="caption">beach! i love going to the beach</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/190304-az.png">
+		<div class="pic instax"><img src="!g/190304-az.png">
 			<div class="hov">
 				<p class="caption">taken in arizona. i was in a ghost town tourist attraction thing.</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/190101-sunset1.png">
+		<div class="pic phone"><img src="!g/190101-sunset1.png">
 			<div class="hov">
 				<p class="caption">i love taking pics of sunsets as you will see</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/190101-sunset2.png">
+		<div class="pic instax"><img src="!g/190101-sunset2.png">
 			<div class="hov">
 				<p class="caption">guys i love sunsets.</p>
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/190305-dessert.jpg">
+		<div class="pic instax"><img src="!g/190305-dessert.jpg">
 			<div class="hov">
 				<p class="caption">taken on a camping trip in a arizona desert. chill experience from what i remember. mostly spent my time reading a book.</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/190101-sunset.jpg">
+		<div class="pic phone"><img src="!g/190101-sunset.jpg">
 			<div class="hov"></div>
 		</div>
 
-		<div class="pic film"><img src="!g/180427-sunset-prflag.jpg">
+		<div class="pic instax"><img src="!g/180427-sunset-prflag.jpg">
 			<div class="hov">
 				<p class="caption">puerto rican flag over sunset. i should turn the brightness up on this one</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/250406-bloom.jpg">
+		<div class="pic phone"><img src="!g/250406-bloom.jpg">
 			<div class="hov">
 				<p class="caption">
 					so nice seeing the trees blooming.<br><b>taken on 03.apr.25</b>
@@ -361,7 +358,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic film">
+		<div class="pic instax">
 			<img src="!g/240702-filmscans%20(1).jpg">
 			<img src="!g/240702-filmscans%20(3).jpg">
 			<img src="!g/240702-filmscans%20(4).jpg">
@@ -396,7 +393,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/240419-misty.jpeg">
+		<div class="pic phone"><img src="!g/240419-misty.jpeg">
 			<div class="hov">
 				<p class="caption">
 					there's this cat called misty that visits me every once in a while. she's very cute! i got her name from her collar. it has a little bell which is perfect because it let's me know when she's by and i always open the door so i can give her some pets. good cat.
@@ -406,7 +403,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic film"><img src="!g/221018-isabela-2.jpg">
+		<div class="pic instax"><img src="!g/221018-isabela-2.jpg">
 			<div class="hov">
 				<p class="caption">
 					grandma
@@ -414,7 +411,7 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/230201-butterfly1.jpg"><img src="!g/230201-butterfly2.jpg"><img src="!g/230201-butterfly3.jpg">
+		<div class="pic phone"><img src="!g/230201-butterfly1.jpg"><img src="!g/230201-butterfly2.jpg"><img src="!g/230201-butterfly3.jpg">
 			<div class="hov">
 				<p class="caption">
 					one day i got out of the house and there were a ton of butterflies around.
@@ -424,31 +421,31 @@ coded with love by des
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/150205-mizu.jpg">
+		<div class="pic phone"><img src="!g/150205-mizu.jpg">
 			<div class="hov">
 				<p class="caption">mizu on a tree, what will he do. i remember i took this one at 6am as i was about to catch the bus for school.</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/160419-flower1.jpg"><img src="!g/160419-flower2.jpg">
+		<div class="pic phone"><img src="!g/160419-flower1.jpg"><img src="!g/160419-flower2.jpg">
 			<div class="hov">
 				<p class="caption">flowers</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/150918-sunset.jpg">
+		<div class="pic phone"><img src="!g/150918-sunset.jpg">
 			<div class="hov">
 				<p class="caption">one of my favorite sunsets that i've captured</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/150405-corrupted-beach.jpg">
+		<div class="pic phone"><img src="!g/150405-corrupted-beach.jpg">
 			<div class="hov">
 				<p class="caption">pic i took that ended up getting corrupted. find it very cool to this day</p>
 			</div>
 		</div>
 
-		<div class="pic digi"><img src="!g/180703-insect.jpg">
+		<div class="pic phone"><img src="!g/180703-insect.jpg">
 			<div class="hov">
 				<p class="caption">sooooo pretty :3</p>
 			</div>
