--- a/doqmeat/vgs/games/fashion-dreamer/index.html
+++ b/doqmeat/vgs/games/fashion-dreamer/index.html
@@ -140,7 +140,7 @@
 	</div>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
-	<script src="../../sticky.js"></script>
+	<script src="../../!f/sticky.js"></script>
 </body>
 
 </html>
