--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -170,7 +170,7 @@
 	</main>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
-	<script src="../../sticky.js"></script>
+	<script src="../../!f/sticky.js"></script>
 
 </body>
 
