--- a/doqmeat/vgs/hardware/index.html
+++ b/doqmeat/vgs/hardware/index.html
@@ -79,6 +79,7 @@
   <footer>
     <a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a>
   </footer>
+  <script src="../!f/sticky.js"></script>
 </body>
 
 </html>
