--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -42,6 +42,7 @@
 	<main>
 		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
+		<img title="drifter meow meow" src="!f/drifter-pagedoll.png" alt="" width="40%" style="float:left">
 		<p>sharing my thoughts, progress, and screenshots of video games i've played! spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>here's my <a href="https://backloggd.com/u/doqmeat/" target="_blank" class="outlink">backloggd acc</a> for a comprehensive list of everything i've played / completed / want to play / etc!</p>
 		<p><b>subpages:</b> <a href="hardware/index.html">hardware</a></p>
