--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -13,6 +13,45 @@
   <script src="/!f/tooltip-jquary.js"></script>
   <script src="/!f/tooltip.js"></script>
   <!--  end of tooltip shit -->
+
+  <style>
+    body {
+      background-image: url(bg.png);
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-position: top;
+    }
+
+    main,
+    footer,
+    header {
+      background: #db92a6ef;
+      color: #413d32;
+      border-color: #413d32;
+
+      a {
+        color: #D8DDF0;
+        text-shadow: 1px 1px 1px black;
+      }
+
+      i {
+        background: transparent;
+        color: #D5B79D;
+        text-shadow: 1px 1px 1px #212525;
+      }
+
+      mark {
+        background: #D8DDF0;
+        color: black;
+      }
+
+      nav.is-pinned {
+        background: #db92a6;
+        border-color: #413d32;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -27,7 +66,14 @@
     <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#screenshots">screenshots</a> / <a href="#outfits">fav outfits</a></nav>
 
     <h3 id="logs">logs</h3>
-
+    <!-- add pics -->
+    <p><span class="date">20.jul.25</span> still playing through the main story and can i just say that i love the pieceys very very much.</p>
+    <center><img src="250720-pieceys.jpg" alt="" width="100%"></center>
+    <p>i find them so unique and adorable. their arc has been possibly my favorite one so far from the main story quest. i also really the abandoned district area quite a lot as well, i like the verticality to it. and i kinda get it but i do wish i could use the gliding ability outside of that place.</p>
+    <figure><img src="250720-beanie.jpg" alt="">
+      <figcaption><b>beanie</b> is my favorite piecey OF COURSE...</figcaption>
+    </figure>
+    <hr>
     <p><span class="date">08.jul.25</span> the <b>yurism</b> of this season.....</p>
     <img src="250708-sith.jpg" alt="infinity nikki screenshots" width="100%">
     <p>i really enjoyed the main questline for 1.7! i still need to finish the main storyline but this was super interesting still. def way up better than 1.6 quest.</p>
@@ -74,6 +120,20 @@
     <img src="panda (4).jpg" width="100%" alt="infinity nikki screenshots">
 
     <h3 id="screenshots">screenshots</h3>
+    <figure>
+      <img src="250720-this-diva.jpg" alt="">
+      <figcaption>quick shoutout to this diva for helping me out with a quest!</figcaption>
+    </figure>
+    <figure>
+      <img src="250630-purple.jpg" alt="">
+      <figcaption>this has got to be one of the best pictures i've taken in this game.</figcaption>
+    </figure>
+    <figure>
+      <img src="250719-apple (1).jpg" alt="">
+      <img src="250719-apple (2).jpg" alt="">
+      <img src="250719-apple (3).jpg" alt="">
+      <figcaption>apple... my nikki apple poo</figcaption>
+    </figure>
     <img src="250708-night.jpg" alt="nikki wearing a crop top with grey sleeves" width="100%">
     <figure>
       <img src="250630-blue.jpg" alt="posing with a blue elegant dress">
@@ -82,6 +142,9 @@
 
     <h3 id="outfits">fav outfits</h3>
     <center>
+      <img src="250720-black-fit.jpg" alt="" width="49%">
+      <img title="tried to do a green and orange combo here" src="250719-orange-green.jpg" alt="" width="49%">
+      <img title="i'm like really obssesed with green in this game omg" src="250719-peach.jpg" alt="" width="49%">
       <img title="the mushroom overall OMGGG" src="250708-mushrooms.jpg" alt="infinity nikki screenshots" width="49%">
       <img src="250630-honey.jpg" width="49%" alt="yellow knitted weater with long white socks and brown boots">
       <img src="250630-evil.jpg" width="49%" alt="grey outfit with a hoodie and miniskirt">
