added some more accs to fashion page

--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -22,13 +22,14 @@
   <div id="clothes"></div>
   <main>
     <div id="intro">
+      <a href="/">go back home?</a>
       <h1>fashion</h1>
-      <p>fashion has been one of my favorite things for <b>expressing myself</b>. as of recently, i've been feeling more comfortable with my body and what i like to wear. i've gotten the chance to wear more and more things that i previously was scared to wear. i love playing around with my looks and my wardrobe, which is probably why i love dress-up games such as the <a title="gaming log for style savvy trendsetters" href="/vgs/games/style-savvy-trendsetters/index.html">style savvy</a> series and i'm also obsessed with doing <b>picrews</b> of myself whenever i can. nothing gives me as much joy as being able to unabashedly express myself through clothing. it has been a very fun experience for me to be able to explore what i like to wear!</p>
+      <p>fashion has been one of my favorite things for <b>expressing myself</b>. as of recently, i've been feeling more comfortable with my body and what i like to wear. i've gotten the chance to wear more and more things that i previously was scared to wear. i love playing around with my looks and my wardrobe, which is probably why i love dress-up games such as the <a title="gaming log for style savvy trendsetters" href="/vgs/games/style-savvy-trendsetters/index.html">style savvy</a> series, <a href="/vgs/games/infinity-nikki/index.html">infinity nikki</a> and i'm also obsessed with doing <b>picrews</b> of myself whenever i can. nothing gives me as much joy as being able to unabashedly express myself through clothing. it has been a very fun experience for me to be able to explore what i like to wear!</p>
       <p>if you asked me to describe my style... i really don't know what i would tell you! my style varies heavily. i like wearing darker colors as well as lighter ones. while most of my wardrobe is very feminine, i also enjoy dressing up a bit more masculine at times. i guess at the moment i am just exploring things out! it just really depends on my mood the night before :3 which is when i'm picking my outfits out.</p>
-      <p>this page will contain outfits of mine that i enjoy wearing! i will also feature pics of my favorite accessories / items.</p>
+      <nav>navigation: <a href="#outfits">outfits</a> - <a href="#acc">accessories</a></nav>
     </div>
     <div class="gallery">
-      <h2>outfits</h2>
+      <h2 id="outfits">outfits</h2>
       <img src="!g/fits/250403.png" alt="purple shirt with a puffy skirt" class="fit-pic caption-pic" title="i saw this skirt at my store and i IMMEDIATELY fell in love with it. i've never had a puffy skirt like this before. awesome." tabindex="0">
       <img src="!g/fits/250121.png" alt="white shirt with a silly cat and cream jeans" class="fit-pic caption-pic" title="love the shirt and the earrings a lot from this fit! i think they look so nice together" tabindex="0">
       <img class="fit-pic caption-pic" src="!g/fits/18.png" title="silly green fit" alt="overalls with a striped green and black shirt and a froggy hat" tabindex="0">
@@ -75,28 +76,37 @@
 
     <div id="acc" class="gallery">
       <h2>accessories</h2>
-      <h3>earrings</h3>
-      <img src="!g/earrings/1.png" alt="" class="fit-pic caption-pic">
-      <img src="!g/earrings/2.png" alt="" class="fit-pic caption-pic">
-      <img src="!g/earrings/3.png" alt="" class="fit-pic caption-pic">
-      <img src="!g/earrings/4.png" alt="" class="fit-pic caption-pic">
-      <img src="!g/earrings/5.png" alt="" class="fit-pic caption-pic">
-      <img src="!g/earrings/6.png" alt="" class="fit-pic caption-pic">
-      <img src="!g/earrings/7.png" alt="" class="fit-pic caption-pic">
-
       <h3>shoes</h3>
-      <img class="fit-pic caption-pic" src="!g/misc/adidas.png" alt="all white adidas">
-      <img class="fit-pic caption-pic" src="!g/misc/converse.png" alt="classic black converse">
+      <p>growing up i used to be really into <i>vans</i> but now i'm more of a <i>converse</i> person.</p>
+      <img title="my running shoes!" src="!g/shoes/brooks.png" alt="brooks grey shoes" class="fit-pic caption-pic">
+      <img title="gay converse!!!!" src="!g/shoes/converse-gay.png" onmouseout="this.src='!g/shoes/converse-gay.png';" onmouseover="this.src='!g/shoes/converse-gay-soles.png';" alt="pride converse" class="fit-pic caption-pic">
+      <img src="!g/shoes/boots.png" alt="black boots with a white fluffy border" class="fit-pic">
+      <img src="!g/shoes/converse-white.png" alt="white converse" class="fit-pic">
+      <img title="LOVEEE these vans so much i call them my picnic vans" src="!g/shoes/vans-picnic.png" alt="light blue, pink, and white vans" class="fit-pic">
+      <img src="!g/shoes/vans-skate.png" alt="red, blue, and yellow vans" class="fit-pic">
+      <img class="fit-pic" src="!g/shoes/adidas.png" alt="all white adidas">
+      <img class="fit-pic" src="!g/shoes/converse.png" alt="classic black converse">
+
+      <h3>earrings</h3>
+      <img src="!g/earrings/1.png" alt="" class="fit-pic">
+      <img src="!g/earrings/2.png" alt="" class="fit-pic">
+      <img src="!g/earrings/3.png" alt="" class="fit-pic">
+      <img src="!g/earrings/4.png" alt="" class="fit-pic">
+      <img src="!g/earrings/5.png" alt="" class="fit-pic">
+      <img src="!g/earrings/6.png" alt="" class="fit-pic">
+      <img src="!g/earrings/7.png" alt="" class="fit-pic">
 
       <h3>misc</h3>
-      <img class="fit-pic caption-pic" title="my fitbit versa 2 watch... been wearing it more often now because of work." src="!g/misc/fitbit.png" alt="fitbit versa 2 watch">
+      <img title="this awesome reversable busch gardens bucket hat. i really love the colors" src="!g/misc/busch-hat-side1.png" onmouseout="this.src='!g/misc/busch-hat-side1.png';" onmouseover="this.src='!g/misc/busch-hat-side2.png';" alt="reversable busch gardens bucket hat" class="fit-pic caption-pic">
+      <img title="my face when my dad shows me this stupid hat he got me... oh i love it very much." src="!g/misc/cat-baseball-cap.png" alt="cat baseball hat" class="fit-pic">
+      <img class="fit-pic caption-pic" title="my galaxy watch! got it as a gift from my dad. i wear this thing whenever i go outside." src="!g/misc/galaxy-watch.png" alt="samsung galaxy watch">
       <img class="fit-pic caption-pic" src="!g/misc/bohug.png" title="bohug hat from artist mysillycomics" alt="bohug hat">
-      <img class="fit-pic caption-pic" src="!g/misc/honey-neck.png" alt="a neckclase with a pot of honey">
+      <img class="fit-pic" src="!g/misc/honey-neck.png" alt="a neckclase with a pot of honey">
     </div>
   </main>
 
   <footer>
-    <p>last updated: <b>03.apr.25</b></p>
+    <p>last updated: <b>20.jul.25</b></p>
     <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
     <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
   </footer>
