made a lighter version of the purple grid bg

--- a/doqmeat/notebook/F2U/materials.html
+++ b/doqmeat/notebook/F2U/materials.html
@@ -75,6 +75,10 @@
 			<div class="tiled-bg" style="background:url(../!g/grid-purple.png)"></div>
 		</a>
 
+		<a class="link" href="../!g/grid-purple-light.png" target="_blank">
+			<div class="tiled-bg" style="background:url(../!g/grid-purple-light.png)"></div>
+		</a>
+
 		<a class="link" href="../!g/grid-grey.png" target="_blank">
 			<div class="tiled-bg" style="background:url(../!g/grid-grey.png)"></div>
 		</a>
