--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>21.jul.25 - 11pm</b> i was not born to do 9hr shifts. i was born to chill instead.</p>
+				</article>
+				<article>
 					<p><b>19.jul.25 - 12am</b> bought a digital cam off ebay today!!! i didn't want anything fancy so i went with this used <i>fujifilm finepix ax660</i> in purple <small>(my favorite color!)</small> <button onclick="showPic('!g/250719-bought-digicam.png','a purple fujifilm digital camera','shes\'s so cuteeeeee! i can\'t wait to take pics with it on my trip he he he')">bought-digicam.png</button></p>
 				</article>
 				<article>
