--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -8,7 +8,7 @@ finished on 02.mar.25
 ----
 
 btw please don't take my entire code and use it as a base.
-you're free to take whatever you need from my site, but please refrain from taking the entire thing and using it for your own -->
+you're free to take whatever you need from my site, but please refrain from taking entire pages as templates that arent free to use and using it for your own. -->
 
 <head>
 	<meta charset="UTF-8">
