--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -172,6 +172,15 @@ you're free to take whatever you need from my site, but please refrain from taki
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
+					<!-- code collective -->
+					<center id="code-collective" style="display:block;margin-bottom:10px">
+						<span>This site is part of the</span> <a href="https://petrapixel.neocities.org/webring"><b>Code Collective</b></a>,<br>
+						<span>a webring for coding resources!</span><br>
+						<a href="https://petrapixel.neocities.org/webring?action=previous" style="text-decoration:none">&lt;prev&gt;</a>
+						<a href="https://petrapixel.neocities.org/webring?action=random" style="text-decoration:none">&lt;random&gt;</a>
+						<a href="https://petrapixel.neocities.org/webring?action=next" style="text-decoration:none">&lt;next&gt;</a>
+					</center>
+
 					<!-- vocaloid webring -->
 					<div id="vocaring" class="medium" style="margin-bottom:10px"></div>
 					<link rel="stylesheet" href="https://electric-tenshi.nekoweb.org/vocaring/vocaring.css">
