added a new fanlisting

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -240,6 +240,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 				</section>
 				<section class="notepad-boxes" id="listings">
 					<h3>fanlistings</h3>
+					<a href="https://imaginary.nu/nikki/index.php" target="_blank"><img src="!g/web/fanlisting/infinity-nikki.png" alt="infinity nikki fanlisting"></a>
 					<a href="https://fan.leilukin.com/programming/" target="_blank"><img src="/!g/web/fanlisting/programming.png" alt="programming fanlisting"></a>
 					<a href="http://fanique.altervista.org/emoticons/" target="_blank"><img src="/!g/web/fanlisting/emoticons.png" alt="emoticons"></a>
 
@@ -303,8 +304,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 					<a href="https://dust.kuchiki.net/" target="_blank"><img src="/!g/web/fanlisting/cats.gif"></a>
 					<br>
 					<img src="/!g/web/fanlisting/cat-moudoku.png" width="20px" alt="pixel art of a grey cat">
-					<span style="font-size: 15px">i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black
-							cat</a></span>
+					<span style="font-size: 15px">i am a <a href="https://cliques.shadow-lord.com/cats/index.php" target="_blank">black cat</a></span>
 					<br>
 					<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting/lejlart-space.gif" alt="appledust space mini-clique"></a>
 					<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
