new journal log

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -16,7 +16,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="index.css" rel="stylesheet" type="text/css" media="all">
+	<link href="files/index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -38,7 +38,6 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 			<p>i write about my life, site stuff, and any other misc things here. <small>i don't proof read what i write in these.</small> <br> <a href="archive.html" target="log">archive</a> - <a href="credit.html" target="log">credit</a></p>
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 
-			<p>links: <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink"> moku.blog</a></p>
 			<p><a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
 
 			<button class="hide" title="memos are also draggable!" onclick="closeMemos()">hide memos</button>
@@ -46,7 +45,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 		</nav>
 
 		<main>
-			<iframe id="mainframe" src="2025/07.html" name="log" height="100%" width="100%"></iframe>
+			<iframe id="mainframe" src="2025/07.html?2507" name="log" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
@@ -59,7 +58,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 		<div class="innermemo">
 			<h2>status.cafe</h2>
 			<!-- start sw-rss-feed code -->
-			<script type="text/javascript" src="status-cafe-feed.js"></script>
+			<script type="text/javascript" src="files/status-cafe-feed.js"></script>
 			<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
 			<span style="font-size:small;">feed powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
 		</div>
@@ -81,8 +80,8 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 	</aside>
 
 	<aside id="pen"><img src="!g/tulip.png" width="100%"></aside>
-	<script src="quotes.js"></script>
-	<script src="memo.js"></script>
+	<script src="files/quotes.js"></script>
+	<script src="files/memo.js"></script>
 	<script src="/!f/draggable.js"></script>
 </body>
 
