--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -46,16 +46,15 @@ coded with love by des
       <small><a href="index.html" target="_parent">out of frame? click here!</a></small>
     </header>
     <h2>log archive</h2>
-    <p>total logs written: <span id="amountLogs"></span></p>
     <!-- 
     tags:
     - life : my overall life
     - pets : anything about my pets! can be about steve or mizu
     - uni : anything school related
     - tech : technology related
-         - interests : overall pasttimes / hobbies
-     - music : music talk
-      - gaming : video game talk
+    - interests : overall pasttimes / hobbies
+    - music : music talk
+    - gaming : video game talk
     - coding: anything that has to do with coding including my site, other stuff
      -->
     <h3>tags</h3>
@@ -71,7 +70,8 @@ coded with love by des
       <button onclick="showLog('gaming')">gaming</button>
     </center>
     <h3>logs</h3>
-    <ul>
+    <ol reversed>
+      <li class="life">25.jul.25 - <a href="2025/07.html#25">to be seen</a></li>
       <li class="life interests coding">06.jul.25 - <a href="2025/07.html#6">my 5th sickening of the year</a></li>
       <li class="gaming">18.jun.25 - <a href="2025/06.html#18">PS5 thoughts: 1 month in</a></li>
       <li class="tech interests">01.jun.25 - <a href="2025/06.html#1">my beautiful madoka discs</a></li>
@@ -141,6 +141,10 @@ coded with love by des
       <li class="life">20.jul.23 - <a href="2023/07.html#20">collie puppies</a></li>
       <li class="life cooking">17.jul.23 - <a href="2023/07.html#17">cooking</a></li>
       <li class="life">08.jul.23 - <a href="2023/07.html#8">sunset</a></li>
+    </ol>
+
+    <p>these ones are from before i would title them. i ain't touching them but they are here.</p>
+    <ul>
       <li><a href="2023/06.html">june 2023</a></li>
       <li><a href="2023/05.html">may 2023</a></li>
       <li><a href="2023/04.html">april 2023</a></li>
@@ -149,7 +153,7 @@ coded with love by des
 
   </main>
 
-  <script src="tags.js"></script>
+  <script src="files/tags.js"></script>
 </body>
 
 </html>
